--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,45 @@
 body * {
   outline: 1px solid lightgrey;
 }
+
+.top {
+  border: 2px solid red;
+  width: 40%;
+  display: inline-block;
+}
+.bottom {
+  border: 2px solid blue;
+  width: 40%;
+  display: inline-block;
+
+}
+.top,
+.bottom {
+  width: 40%;
+  display: inline-block;
+}
+
+.container {
+  padding: 15px;
+}
+.bottom.border-green {
+  border: 2px solid green;
+  display: none;
+}
+p {
+  color: tomato;
+}
+.top p {
+  color:aqua;
+}
+.top p:hover {
+  cursor: pointer;
+}
+a:visited {
+  color:red;
+
+}
+a {
+  display: block;
+  margin: 50px;
+}
