--- a/src/main.scss
+++ b/src/main.scss
@@ -1,12 +1,35 @@
 body * {
   outline: 1px solid lightgrey;
+
+  
+}
+.container {  
+  border:4px solid red
 }
 
-.main-nav {
-  border: 2px solid red;
-  width: 90%;
+.main-nav li {
   display: inline-block;
 }
-.mail-nav.ul li {
-  display: inline;
+.sub-menu {
+  border-style: none;
+  border: 4px dashed green;  
+  padding-top:8px;
+  padding-bottom: 8px;
+  
+}
+
+.blocks span {
+  display: block;  
+}
+.blocks p {
+  color:green;
+}
+.inline {
+  border-style: none;
+  border: 4px double green;
+  color: blue;
+  
+}
+.inline p {
+  display: inline-block;
 }
