--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,26 @@
+@import "./partials/articale/article.scss";
+
+body {
+  margin: 0;
+}
 body * {
   outline: 1px solid lightgrey;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 50px 0;
+  
+}
+
+footer {
+  background-color:orange;
+}
+
+.for-columns {
+  display: flex;
+}
+
+.for-columns__item {
+  width: 25%;
 }
