--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,5 @@
 @import "./partials/articale/article.scss";
+@import "./partials/team-card/team-cardd.scss";
 
 body {
   margin: 0;
@@ -24,10 +25,22 @@ footer {
 .for-columns__item {
   width: 25%;
 }
+
+.three-columns {
+  display:flex;
+
+}
+.three-columns__item {
+  width: 33.3%;
+  padding: 0 50px;
+  box-sizing: border-box;
+}
+
+
 .header {
   padding: 40px 0 15px 0;
   color:orange ;
-  font-size: 30px;
+  font-size: 40px;
   text-decoration:underline;
   text-align: center;
 
