--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,32 @@
-
-
-.content {
-  width: 500px;
-  height:300px;
-  border: 1px solid red;
+body * {
+  outline: 1px solid lightgrey;
+}
+html, body {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
+.header {
+  height: 80px;
+  background-color:green;
+  text-align: center;
+  color:yellow;
+  font-size:40px;
+}
+.main-content {
+  background-color:yellow;
+  color: blue;
+  text-align: center;
+  font-size: 40px;
+  flex: 1 0 auto;
+}
+.footer {
+  height: 80px;
+  background-color:purple;
+  color: azure;
+  font-size: 40px;
+  text-align: center;
+  flex-shrink: 0;
 }
