--- a/src/partials/team-card/team-cardd.scss
+++ b/src/partials/team-card/team-cardd.scss
@@ -12,6 +12,11 @@
         border-radius: 50%;
         overflow: hidden;
         border:2px solid orange;
+        padding: calc(50% - 2px);
+        font-size: 0;
+        background-image: url(/img/krolik-porody-barani-04.jpg);
+        background-position: 50%;
+        background-size: cover;
         img {        
         max-width: 100%;
         max-height: 100%;
