--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,17 @@ body {
 body * {
   outline: 1px solid lightgrey;
 }
+.picture-blog-img {
+  height: 80px;
+  width: 55px;
+  text-align: center;
+}
+.picture-blog:hover {
+  top: 2px;
+  left: 2px;
+  opacity: 1;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
