--- a/src/partials/articale/article.scss
+++ b/src/partials/articale/article.scss
@@ -1,9 +1,9 @@
 .acticle p {
-    color:blue;
+    color:black;
     font-size:18px;
-    font-style: italic;
+    font-style: sans-serif;
     text-align: justify;
-    padding: 5px;
+    padding: 15px;
   }
   .acticle .read-more {
      color:orange;
