--- a/src/partials/team-card/_team-cadd.html
+++ b/src/partials/team-card/_team-cadd.html
@@ -6,5 +6,8 @@
         </span>
         <div  class="team-card__img">
         </div>
+        <span class="team-card__texty">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        </span>
     </div>
 </div>
