--- a/src/main.scss
+++ b/src/main.scss
@@ -70,6 +70,8 @@ header.container {
     padding-top: 8px;
     font-weight: bold;
     font-size: 18px;
+    border-radius: 50%;
+    border:10px red solid;
     &:hover {
       position: relative;
       background-color:orange;
