--- a/src/main.scss
+++ b/src/main.scss
@@ -37,6 +37,19 @@ header.container {
    
 
 }
+.space-orang {
+  font-size: 22px;
+  margin-top:20px;
+  margin-bottom: 0;
+}
+.space-Rabbit{
+  color:orange;
+  margin: 0;
+  font-size: 27px;
+
+}
+
+
 .picture-blog {
   
   padding: 0 15px;
@@ -70,8 +83,7 @@ header.container {
     padding-top: 8px;
     font-weight: bold;
     font-size: 18px;
-    border-radius: 50%;
-    border:10px red solid;
+    border:2px #4b4f4f solid;
     &:hover {
       position: relative;
       background-color:orange;
@@ -82,6 +94,8 @@ header.container {
 
     
   }
+
+  
   &__orranges {
     width: 250px;
     text-align: center;
