--- a/src/partials/team-card/_team-cadd.html
+++ b/src/partials/team-card/_team-cadd.html
@@ -4,10 +4,13 @@
          <span class="team-card__position">
              -Lead Desinger
         </span>
-        <div  class="team-card__img">
+        <div 
+         class="team-card__img"
+         style="background-image: url('@@imgPath')";
+         >
         </div>
-        <span class="team-card__texty">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        </span>
+        <p class="team-card__texty">
+            @@cardContent 
+        </p>
     </div>
 </div>
