--- a/src/main.scss
+++ b/src/main.scss
@@ -37,7 +37,6 @@ body {
   }
   &__menu {
     color:white;
-    text-decoration: none;
     width: 150px;
     margin-right: 30px;
     text-align: center;
@@ -47,12 +46,16 @@ body {
     border:2px solid tomato;
     border-radius: 10px;
     background-color: tomato;
-    color:white;
     cursor: pointer;
     
   }
-  &__menu:hover {
+  &__menu a{
     text-decoration: none;
+    color:white;
+
+  }
+  &__menu:hover {
+  text-decoration: none;
   background-color:rgb(216, 79, 25);
   position: relative;
   top:1px;
@@ -61,32 +64,24 @@ body {
 
   }  
 }
-a {
-  text-decoration: none;
-  color:white;
-}
-
 
 .banner {
   width:100%;
-  height: 90vh; 
+  height: 100vh; 
   background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/img/pizzahut.jpg);
   background-position:center;
   background-size:cover;
   color: white; 
-  display: flex; 
   text-align: center;
   &__mein {
-    width: 100%;
-    margin: 100px auto;
-    height: 500px;
-    width: 50%;
+    margin: 0 auto;
+    padding-top: 120px;    
     
 
   }
   &__title ~ p {
-    font-size: 25px;    
-    margin: 50px auto;
+    font-size: 35px;    
+    margin: 100px auto;
     
   }
 
@@ -103,4 +98,41 @@ h1 {
   height: 400px;
   
 }
+.title {
+  display: flex;
+  width: 100%;
+  margin-top: 100px;
+  justify-content: center;
+  &__text  {
+    width: 400px;
+    color:white;
+    margin-right:20%;
+    font-size: 25px;
+    text-align: justify;
+  
+  }
+}
+.button {
+  &__order{
+  width: 300px;
+  height: 100px;
+  background-color:tomato;
+  border: 2px solid tomato;
+  border-radius: 10px;
+  font-size: 30px;
+  color:white;
+  }
+  &__order:hover {
+    cursor: pointer;
+    letter-spacing:1.5px;
+    text-decoration: none;
+    background-color:rgb(216, 79, 25);
+    position: relative;
+    top:1px;
+    left:1px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+}
+
+
 
