--- a/src/main.scss
+++ b/src/main.scss
@@ -13,12 +13,13 @@ body {
   width: 100%;
   height: 100px;
   background-color: white;
-  position: fixed;
 
 }
 .header {
   width:100%;
-  height:100px;  
+  height:100px;
+  z-index: 2;
+  position: fixed;  
  
   
   &__logo {
@@ -137,6 +138,7 @@ h2{
   font-size: 4em;
   font-style: italic;
   text-align: center;
+  margin-top: 100px;
 }
 .sss {
   border: none;
@@ -147,6 +149,7 @@ h2{
   
 }
 .splide {
+  border: 2px solid tomato;
   margin: 0 auto;
   color:black;
   font-style: italic;
@@ -164,6 +167,9 @@ h2{
 
   }
 
+}
+.menu {
+  height: 500px;
 }
 
 
