--- a/src/main.scss
+++ b/src/main.scss
@@ -169,7 +169,46 @@ h2{
 
 }
 .menu {
-  height: 500px;
-}
+  margin: 0 auto;
+  width: 1280px;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  &__menu-card {
+    width: 300px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 100px;
+    
+  }
+  &__textm {
+    color:tomato;
+    text-align: center;
+    margin-bottom: 0;
+    font-size: 1.4em;
+  }
+  &__texty {
+    color:black;
+    text-align: center;
+    
+  }
+  &__buttom {
+    margin: 0 auto;
+    width: 100px;
+    border: 2px solid tomato;
+    border-radius: 5px;
+    background-color:tomato;
+    color:white;
+    font-size: 15px;
+    position: relative;
+    &:hover {
+      position: relative;
+      cursor: pointer;
+      top:1px;
+      background-color:rgb(216, 79, 25);
+    }
+  }
 
+}
 
