--- a/src/partials/menu-card/_arcticle.html
+++ b/src/partials/menu-card/_arcticle.html
@@ -1,9 +1,11 @@
- <img src="/img/pizzaone.jpg" alt="">
+ <div class="menu_img"
+      style="background-image: url('@@imgPath')";>
+</div>
 
  <h4 class="menu__textm"> Peperoni
   </h4>
 
-<p class="menu__texty">Lorem ipsum dolor sit amet, consectetur adipisicing elit.xczdczvdddsdf f sdf sfgdf gdf gdf gdf ggfdg dfg dfg df.
+<p class="menu__texty">@CardContent
 </p>
     
  <button class="menu__buttom">Заказать</button>
