--- a/src/partials/menu-card/_arcticle.html
+++ b/src/partials/menu-card/_arcticle.html
@@ -1,12 +1,11 @@
- <div class="menu_img"
+<div class="menu__popo"
       style="background-image: url('@@imgPath')";>
 </div>
 
- <h4 class="menu__textm"> Peperoni
-  </h4>
+<h4 class="menu__textm"> Peperoni
+</h4>
 
-<p class="menu__texty">@CardContent
-</p>
-    
- <button class="menu__buttom">Заказать</button>
+ <p class="menu__texty">@@cardContent
+ </p>
 
+   <button class="menu__buttom">Заказать</button>
