--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,4 @@
+@import "./partials/menu-card/menu-card.scss"
 
 body {
   margin: 0;
@@ -175,6 +176,7 @@ h2{
   display: flex;
   flex-wrap: wrap;
   &__menu-card {
+    display: flex;
     width: 300px;
     height: 500px;
     display: flex;
@@ -187,17 +189,24 @@ h2{
     text-align: center;
     margin-bottom: 0;
     font-size: 1.4em;
+    margin-top: 0;
   }
   &__texty {
     color:black;
     text-align: center;
     
   }
-  &__img {
-    background-color:red;
-    width: 200px;
-    height: 200px;
-    background-image: url('/img/pizzaone.jpg');
+  &__popo {
+    border-radius: 10px;
+    overflow: hidden;
+    border:2px solid tomato;
+    height: 300px;
+    font-size: 0;   
+    background-position: 50%;
+    background-size: cover;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
   }
   &__buttom {
     margin: 0 auto;
@@ -215,6 +224,4 @@ h2{
       background-color:rgb(216, 79, 25);
     }
   }
-
 }
-
