--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,4 @@
-@import "./partials/menu-card/menu-card.scss"
+@import "./partials/menu-card/menu-card.scss";
 
 body {
   margin: 0;
@@ -168,60 +168,4 @@ h2{
 
   }
 
-}
-.menu {
-  margin: 0 auto;
-  width: 1280px;
-  height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
-  &__menu-card {
-    display: flex;
-    width: 300px;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    margin-left: 100px;
-       
-  }
-  &__textm {
-    color:tomato;
-    text-align: center;
-    margin-bottom: 0;
-    font-size: 1.4em;
-    margin-top: 0;
-  }
-  &__texty {
-    color:black;
-    text-align: center;
-    
-  }
-  &__popo {
-    border-radius: 10px;
-    overflow: hidden;
-    border:2px solid tomato;
-    height: 300px;
-    font-size: 0;   
-    background-position: 50%;
-    background-size: cover;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    
-  }
-  &__buttom {
-    margin: 0 auto;
-    width: 100px;
-    border: 2px solid tomato;
-    border-radius: 5px;
-    background-color:tomato;
-    color:white;
-    font-size: 15px;
-    position: relative;
-    &:hover {
-      position: relative;
-      cursor: pointer;
-      top:1px;
-      background-color:rgb(216, 79, 25);
-    }
-  }
 }
