--- a/src/partials/menu-card/_arcticle.html
+++ b/src/partials/menu-card/_arcticle.html
@@ -2,7 +2,7 @@
       style="background-image: url('@@imgPath')";>
 </div>
 
-<h4 class="menu__textm"> Peperoni
+<h4 class="menu__textm">@@cardname
 </h4>
 
  <p class="menu__texty">@@cardContent
