--- a/src/partials/menu-card/_arcticle.html
+++ b/src/partials/menu-card/_arcticle.html
@@ -7,5 +7,6 @@
 
  <p class="menu__texty">@@cardContent
  </p>
+ <p class="menu__cena">@@cardCena</p>
 
    <button class="menu__buttom">Заказать</button>
