--- a/src/partials/menu-card/menu-card.scss
+++ b/src/partials/menu-card/menu-card.scss
@@ -7,10 +7,9 @@
     &__menu-card {
       display: flex;
       width: 300px;
-      height: 500px;
-      display: flex;
       flex-direction: column;
       margin-left: 100px;
+    
          
     }
     &__textm {
@@ -23,13 +22,15 @@
     &__texty {
       color:black;
       text-align: center;
+      height: 5em;
+      font-style: italic;
+      
       
     }
     &__popo {
-      border-radius: 10px;
-      
+      border-radius: 10px;      
       border:2px solid tomato;
-      height: 300px;
+      height: 250px;
       font-size: 0;   
       background-position: 50%;
       background-size: cover;
@@ -46,11 +47,17 @@
       color:white;
       font-size: 15px;
       position: relative;
+      margin-bottom: 30px;
       &:hover {
         position: relative;
         cursor: pointer;
         top:1px;
         background-color:rgb(216, 79, 25);
       }
+    }
+    &__cena {
+      text-align: center;
+      font-size: 25px;
+      color:red;
     }
   }
