--- a/src/partials/menu-card/menu-card.scss
+++ b/src/partials/menu-card/menu-card.scss
@@ -1,14 +1,13 @@
 .menu {
     margin: 0 auto;
-    width: 1280px;
-    height: 100vh;
+    width: 80%;
     display: flex;
     flex-wrap: wrap;
     &__menu-card {
       display: flex;
-      width: 300px;
+      width: 30%;
       flex-direction: column;
-      margin-left: 100px;
+      margin:0 auto;
     
          
     }
@@ -36,6 +35,12 @@
       background-size: cover;
       margin-top: 20px;
       margin-bottom: 20px;
+      transition: 1s;
+      &:hover {
+        transform: scale(1.1);
+        cursor: pointer;
+
+      }
       
     }
     &__buttom {
