--- a/src/main.scss
+++ b/src/main.scss
@@ -69,7 +69,7 @@ body {
 
 .banner {
   width:100%;
-  height: 100vh; 
+  height: 100%; 
   background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/img/pizzahut.jpg);
   background-position:center;
   background-size:cover;
@@ -102,12 +102,15 @@ h1 {
   width: 100%;
   margin-top: 100px;
   justify-content: center;
+  
   &__text  {
-    width: 600px;
+    width: 40%;
     color:white;
     margin-right:20%;
     font-size: 25px;
     text-align: justify;
+    margin-bottom: 100px;
+   
   
   }
 }
@@ -164,4 +167,51 @@ h2{
 
   }
 
+}
+
+
+.reviews {
+  width: 70%;
+  margin: 100px auto;
+  display: flex;
+  &__blog{
+    display: flex;
+    width: 33%;
+    height: 300px;
+    margin-left: 50px;
+    
+  }
+  &__photo {
+    width: 50%;
+    height: 100%;
+    background-image: url(/img/user1.jpg);
+    background-position:50%;
+    background-size:cover;
+    border-radius: 10px;
+    border: 2px tomato solid;
+  }
+  &__comment {
+    width: 50%;
+    margin: 5px 10px;
+    font-size: 18px;
+    text-align: justify;
+  }
+}
+
+.contacts {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  &__adres {
+    margin-left: 100px;
+    ul {
+      padding-top: 30px;
+      color:red;
+      list-style: none;
+      margin-top:20px;
+    }
+    li {
+      margin-bottom: 4em;
+    }
+  }
 }
