--- a/src/main.scss
+++ b/src/main.scss
@@ -177,14 +177,12 @@ h2{
   &__blog{
     display: flex;
     width: 33%;
-    height: 300px;
     margin-left: 50px;
     
   }
   &__photo {
     width: 50%;
     height: 100%;
-    background-image: url(/img/user1.jpg);
     background-position:50%;
     background-size:cover;
     border-radius: 10px;
@@ -214,4 +212,7 @@ h2{
       margin-bottom: 4em;
     }
   }
+}
+h4 {
+  margin: 0 auto;
 }
