--- a/src/main.scss
+++ b/src/main.scss
@@ -163,7 +163,7 @@ h2{
 
 
 .reviews {
-  width: 70%;
+  width: 80%;
   margin: 100px auto;
   display: flex;
   &__blog{
@@ -174,7 +174,7 @@ h2{
   }
   &__photo {
     width: 50%;
-    height: 100%;
+    height: 250px;
     background-position:50%;
     background-size:cover;
     border-radius: 10px;
@@ -184,7 +184,6 @@ h2{
     width: 50%;
     margin: 5px 10px;
     font-size: 18px;
-    text-align: justify;
   }
 }
 
