--- a/src/main.scss
+++ b/src/main.scss
@@ -5,8 +5,13 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+.primary-nav {
+  margin: 0 auto;
+  width: 100%;
+}
 .container{
   margin: 0 auto;
+  width: 1280px; 
 }
 
 .headertitile {
@@ -34,13 +39,14 @@ body {
     display: flex;
     width: 100%;
     justify-content: flex-end;
+    margin-right: 70px;
     
     
   }
   &__menu {
     color:white;
-    width: 150px;
-    margin-right: 30px;
+    width: 120px;
+    margin-right: 50px;
     text-align: center;
     padding: 0;
     font-size: 22px;
@@ -116,7 +122,7 @@ h1 {
 }
 .button {
   &__order{
-  width: 300px;
+  width: 8em;
   height: 100px;
   background-color:tomato;
   border: 2px solid tomato;
@@ -163,7 +169,6 @@ h2{
 
 
 .reviews {
-  width: 80%;
   margin: 100px auto;
   display: flex;
   &__blog{
@@ -173,37 +178,107 @@ h2{
     
   }
   &__photo {
-    width: 50%;
-    height: 250px;
+    width: 40%;
+    height: 200px;
     background-position:50%;
     background-size:cover;
     border-radius: 10px;
     border: 2px tomato solid;
   }
   &__comment {
-    width: 50%;
+    width: 60%;
     margin: 5px 10px;
     font-size: 18px;
+    text-align: left;
   }
 }
 
 .contacts {
-  width: 70%;
-  margin: 0 auto;
+  margin: 100px auto;
   display: flex;
+  &__maps {
+    border-radius: 10px;
+    border:3px solid tomato;
+  }
   &__adres {
     margin-left: 100px;
     ul {
-      padding-top: 30px;
-      color:red;
+      font-size: 20px;
+      padding-top: 20px;
+      color:black;
       list-style: none;
-      margin-top:20px;
+      margin-top:10px;
     }
-    li {
-      margin-bottom: 4em;
+    a {
+      color:tomato;
+      text-decoration: none;
+      
+    }
+    a:hover  {
+      color:rgb(216, 79, 25);
     }
   }
 }
 h4 {
   margin: 0 auto;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background-color:tomato;
+  display: flex;
+  &__rights {
+    width: 50%;
+    text-align: center;
+    color:white;
+    font-size: 20px;
+  }
+  p {
+    margin: 0;
+    padding-top: 15px; 
+   }
+  &__networks {
+    display: flex;
+    width: 50%;
+    justify-content: center;
+  }
+}
+.fa {
+  padding: 10px 8px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 20px 5px;
+  height: 20px;
+}
+.fa:hover {
+  opacity: 0.7;
+  color:tomato;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.fa-snapchat-ghost {
+  background: #fffc00;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+.fa-skype {
+  background: #00aff0;
+  color: white;
 }
