--- a/src/main.scss
+++ b/src/main.scss
@@ -11,7 +11,7 @@ body {
 }
 .container{
   margin: 0 auto;
-  width: 1280px; 
+  max-width: 1280px; 
 }
 
 .headertitile {
@@ -39,14 +39,14 @@ body {
     display: flex;
     width: 100%;
     justify-content: flex-end;
-    margin-right: 70px;
+    margin-right: 50px;
     
     
   }
   &__menu {
     color:white;
-    width: 120px;
-    margin-right: 50px;
+    width: 110px;
+    margin-right: 30px;
     text-align: center;
     padding: 0;
     font-size: 22px;
@@ -258,27 +258,24 @@ h4 {
   color:tomato;
 }
 .fa-facebook {
-  background: #3B5998;
+  background: rgb(58, 87, 157);
   color: white;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .fa-twitter {
   background: #55ACEE;
   color: white;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-.fa-youtube {
-  background: #bb0000;
-  color: white;
-}
+
 .fa-instagram {
   background: #125688;
   color: white;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-.fa-snapchat-ghost {
-  background: #fffc00;
-  color: white;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
+
 .fa-skype {
   background: #00aff0;
   color: white;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
