--- a/src/main.scss
+++ b/src/main.scss
@@ -44,26 +44,34 @@ body {
     
   }
   &__menu {
-    color:white;
-    width: 110px;
-    margin-right: 30px;
-    text-align: center;
-    padding: 0;
-    font-size: 22px;
-    padding-top: 14px;
-    border:2px solid tomato;
-    border-radius: 10px;
-    background-color: tomato;
-    cursor: pointer;
+    display:flex;
+    width:100%;
+    justify-content: flex-end;
+    margin-top: 30px;
+    margin-right: 100px;
+    
     
   }
-  &__menu a{
-    text-decoration: none;
-    color:white;
-
+  &__menu li {
+    width:120px;
+    height: 45px;
+    border:2px solid tomato;
+    list-style: none;
+    text-align: center;
+    background-color:tomato;
+    margin-right:2em;
+    border-radius: 10px;
+    
   }
-  &__menu:hover {
-  text-decoration: none;
+  a {
+    color:white;
+    font-size: 22px;
+    text-decoration: none;
+    position: relative;
+    top:8px
+    
+  }
+  li:hover {
   background-color:rgb(216, 79, 25);
   position: relative;
   top:1px;
@@ -123,7 +131,7 @@ h1 {
 .button {
   &__order{
   width: 8em;
-  height: 100px;
+  height: 70px;
   background-color:tomato;
   border: 2px solid tomato;
   border-radius: 10px;
