--- a/src/main.scss
+++ b/src/main.scss
@@ -14,7 +14,7 @@ body {
   max-width: 1280px; 
 }
 
-.headertitile {
+.header__body {
   display: flex;
   width: 100%;
   height: 100px;
@@ -43,7 +43,7 @@ body {
     
     
   }
-  &__menu {
+  &__list {
     display:flex;
     width:100%;
     justify-content: flex-end;
@@ -52,7 +52,7 @@ body {
     
     
   }
-  &__menu li {
+  &__list li {
     width:120px;
     height: 45px;
     border:2px solid tomato;
@@ -61,9 +61,10 @@ body {
     background-color:tomato;
     margin-right:2em;
     border-radius: 10px;
+    cursor: pointer;
     
   }
-  a {
+  &__link {
     color:white;
     font-size: 22px;
     text-decoration: none;
