--- a/src/main.scss
+++ b/src/main.scss
@@ -178,13 +178,20 @@ h2{
   font-style: italic;
   text-align: center;
   margin-top: 100px;
+  margin-bottom: 0;
+  width:100%;
 }
-.sss {
+.location {
+  width:100%;
+  margin-bottom: 100px;
+}
+.separator {
   border: none;
   background-color: tomato;
   height: 3px;
   width: 30em;
   margin: 50px auto;
+  
   
 }
 .splide {
@@ -199,11 +206,13 @@ h2{
     margin-top: 0;
   }
 }
+ .review {
+   display:flex;
+ }
 
 
 .reviews {
-  margin: 100px auto;
-  display: flex;
+  margin: 0 auto;
   &__blog{
     display: flex;
     width: 33%;
@@ -227,8 +236,9 @@ h2{
 }
 
 .contacts {
-  margin: 100px auto;
+  margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
   &__maps {
     border-radius: 10px;
     border:3px solid tomato;
@@ -261,6 +271,7 @@ h4 {
   height: 100px;
   background-color:tomato;
   display: flex;
+  margin-top: 100px;
   &__rights {
     width: 50%;
     text-align: center;
@@ -319,11 +330,12 @@ h4 {
 
 }
 
+ 
 
 
 
 
-@media (max-width:900px) {
+@media (max-width:980px) {
   .header {
     height: 60px;
     max-width: 900px;
@@ -452,7 +464,7 @@ h4 {
   .title__text{
     display: none;
   }
-  .sss {    
+  .separator {    
     width:30%;
   }
   .splide {
@@ -511,6 +523,12 @@ h4 {
         margin-bottom: 20px;
       }
     }
+    .review {
+      flex-direction: column;
+    }
+    .location {
+      margin: 0 auto;
+    }
   
   }
 
@@ -559,7 +577,7 @@ h4 {
   .title__text{
     display: none;
   }
-  .sss {    
+  .separator {    
     width:20%;
   }
   .splide {
