--- a/src/main.scss
+++ b/src/main.scss
@@ -538,9 +538,9 @@ h4 {
 
 
 
-@media (max-width:500px) {
+@media (max-width:580px) {
   .header {
-    max-width: 500px;
+    max-width: 580px;
     height: 50px;
     background-color:white;
   }
@@ -608,7 +608,7 @@ h4 {
       text-align: center;
       margin-bottom: 0;
       font-size: 1.2em;
-      margin-top: 0;
+      margin-top: 10px;
     }
     &__texty {
       color:black;
@@ -633,6 +633,9 @@ h4 {
       font-size: 15px;
       margin-bottom: 30px;
      
+    }
+    &__cena {
+      margin-top: 30px;
     }
    
   }
