--- a/src/main.scss
+++ b/src/main.scss
@@ -180,6 +180,12 @@ h2{
   margin-top: 100px;
   margin-bottom: 0;
   width:100%;
+  position: relative;
+
+}
+h2 span {
+  position: absolute;
+  top:-100px;
 }
 .location {
   width:100%;
